[package]
name = "Staking"
version = "3.0.0-rc9"
authors = ["Angel Brett <Longc3505@gmail.com>"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3.0.0-rc9", path = "../../crates/primitives", default-features = false }
ink_metadata = { version = "3.0.0-rc9", path = "../../crates/metadata", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc9", path = "../../crates/env", default-features = false }
ink_storage = { version = "3.0.0-rc9", path = "../../crates/storage", default-features = false }
ink_lang = { version = "3.0.0-rc9", path = "../../crates/lang", default-features = false }
ink_prelude = { version = "3.0.0-rc9", path = "../../crates/prelude", default-features = false }
secp256k1 = { version = "0.22.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
erc20 = {version = "3.0.0-rc9", path = "erc20", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "Staking"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",

    "erc20/std",
]
ink-as-dependency = []

[workspace]
members = [
    "erc20",
]

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
